lib/gen/arith/ArithParser.g4
// ANTLRv4 File generated by the BNF Converter (bnfc 2.9.6).

// Parser definition for use with ANTLRv4
parser grammar ArithParser;

options {
  tokenVocab = ArithLexer;
}


start_Exp2
  : exp2 EOF
  ;
start_Exp1
  : exp1 EOF
  ;
start_Exp
  : exp EOF
  ;

exp2
  : p_1_1=INTEGER
    # ConstInteger
  | p_2_1=DOUBLE
    # ConstDouble
  | Surrogate_id_SYMB_4 p_3_2=exp Surrogate_id_SYMB_5
    # Brackets
  ;
exp1
  : p_1_1=exp1 Surrogate_id_SYMB_0 p_1_3=exp2
    # Mul
  | p_2_1=exp1 Surrogate_id_SYMB_1 p_2_3=exp2
    # Div
  | p_3_1=exp2
    # Coercion_Exp1_3
  ;
exp
  : p_1_1=exp Surrogate_id_SYMB_2 p_1_3=exp1
    # Sum
  | p_2_1=exp Surrogate_id_SYMB_3 p_2_3=exp1
    # Sub
  | p_3_1=exp1
    # Coercion_Exp_3
  ;
